# fuzzyart

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.txt  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  readme.rst
docs/api/: models.rst  preprocessing.rst  utils.rst
docs/examples/: 01_iris_classification.rst  02_olivetti_faces.rst  03_sklearn_comparison.rst  index.rst
docs/guide/: algorithm.rst  hyperparameters.rst  index.rst  preprocessing.rst
examples/: 01_iris_classification.ipynb  02_olivetti_faces.ipynb  03_sklearn_comparison.ipynb  04_all_models_medical_benchmark.ipynb  05_benchmark_comparison.ipynb
fuzzyart/: __init__.py
fuzzyart/models/: __init__.py  base.py  bayesian_artmap.py  ensemble.py  fam.py  semisupervised_artmap.py
fuzzyart/preprocessing/: __init__.py  transforms.py
fuzzyart/utils/: __init__.py  math.py
scripts/: ci.sh
tests/: conftest.py  test_bayesian_artmap.py  test_extended_models.py  test_fam.py  test_preprocessing.py  test_utils.py
